hphp/hack/test/typecheck/strict_switch/missing_null.php
<?hh

<<file: __EnableUnstableFeatures('strict_switch')>>
<<__StrictSwitch>>
function missing_null(null $x): void {
  switch ($x) {
    case 42:
      return;
  }
}
